--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "devDependencies": {
-    "vite": "^2.5.1"
+    "vite": "^2.5.1",
+    "vite-babel-plugin": "^0.0.2"
   }
 }
